# python-pe

./: .coverage  README.md  pyproject.toml
src/: arrows.py  collatz.py  input.py  loop.py
src/data/: data.py
src/ml/: serialize-models.py  utils.py
src/pkl/: pickling.py
